--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
               <img src="images/img14.jpg" width="43" height="40" />
             </td>
             <td width="124"><a href="list5.html">和陵南队比赛的精彩瞬间</a></td>
+            <td width="45" height="40" align="left" valign="middle">
+              <img src="images/img14.jpg" width="43" height="40" />
+            </td>
+            <td width="122"><a href="https://lu7jiu.github.io/room_web/">寝室主页</a></td>
           </tr>
         </table>
       </div>
